bugfix/css-overflow-bug

--- a/front-end/sapo-front/src/app/templates/admin/concursos/concurso-form/concurso-form.component.scss
+++ b/front-end/sapo-front/src/app/templates/admin/concursos/concurso-form/concurso-form.component.scss
@@ -14,6 +14,7 @@ div {
     section {
         width: 100%;
         height: 80%;
+        padding: 12px;
         overflow-y: scroll;
         overflow-x: hidden;
     }
