--- a/front-end/sapo-front/src/app/templates/admin/concursos/concursos.component.scss
+++ b/front-end/sapo-front/src/app/templates/admin/concursos/concursos.component.scss
@@ -1,8 +1,13 @@
 @import './../../../../styles/colors.scss';
 
 div {
-    padding: 12px;
+    height: 100%;
+    overflow: hidden;
+    padding: 32px 12px;
     section {
+        height: 100%;
+        margin-bottom: 12px;
+        overflow-y: scroll;
         padding: 32px 16px 16px 32px;
     }
 }
