--- a/front-end/sapo-front/src/styles/html.scss
+++ b/front-end/sapo-front/src/styles/html.scss
@@ -12,6 +12,11 @@ html, body {
     height: 100%;
 }
 
+h2 {
+    font-size: 36px;
+    letter-spacing: 2px;
+}
+
 h3 {
     font-size: 32px;
     letter-spacing: 2px;
